fix nav z-index

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,7 +8,7 @@ header {
   position: sticky;
   top: 0;
   background-color: white;
-  z-index: 1;
+  z-index: 2;
 
   nav {
     ul {
